[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/CommandPalettePopup/CommandPaletteSettings.gd" type="Script" id=1]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="CommandPaletteSettings" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 65.0001
rect_min_size = Vector2( 0, 665 )
popup_exclusive = true
window_title = "Command Palette Settings"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 15.0
margin_right = -50.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1820.0
margin_bottom = 1110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsVB" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 872.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideScriptPanelOnStart" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_right = 1820.0
margin_bottom = 40.0
text = "Hide script panel (list of open scripts, help pages and methods) on start"

[node name="IncludeHelpPages" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 44.0
margin_right = 1820.0
margin_bottom = 84.0
pressed = true
text = "Include help pages in open script list (of this plugin)"

[node name="AdaptiveHeight" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 88.0
margin_right = 1820.0
margin_bottom = 128.0
pressed = true
text = "Adaptive height"

[node name="ShowPathForRecentFiles" type="CheckButton" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 132.0
margin_right = 1820.0
margin_bottom = 172.0
text = "Show file path for recent files"

[node name="KeyboardShortcut" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 176.0
margin_right = 1820.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeyboardShortcut"]
margin_top = 5.0
margin_right = 116.0
margin_bottom = 19.0
text = "Keyboard shortcut"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeyboardShortcut"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "Control+E"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false

[node name="EditButton" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/KeyboardShortcut"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="WindowWidth" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 204.0
margin_right = 1820.0
margin_bottom = 228.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/WindowWidth"]
margin_top = 5.0
margin_right = 90.0
margin_bottom = 19.0
text = "Window width"
valign = 1

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/SettingsVB/WindowWidth"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
max_value = 4000.0
value = 1000.0

[node name="WindowMaxHeight" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 232.0
margin_right = 1820.0
margin_bottom = 256.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/WindowMaxHeight"]
margin_top = 5.0
margin_right = 126.0
margin_bottom = 19.0
text = "Window max height"
valign = 1

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/SettingsVB/WindowMaxHeight"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
max_value = 4000.0
value = 920.0

[node name="KeywordAllFiles" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 260.0
margin_right = 1820.0
margin_bottom = 284.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordAllFiles"]
margin_top = 5.0
margin_right = 104.0
margin_bottom = 19.0
text = "Keyword all files"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordAllFiles"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "a "

[node name="KeywordAllScripts" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 288.0
margin_right = 1820.0
margin_bottom = 312.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordAllScripts"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
text = "Keyword all scripts"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordAllScripts"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "ac "

[node name="KeywordAllScenes" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 316.0
margin_right = 1820.0
margin_bottom = 340.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordAllScenes"]
margin_top = 5.0
margin_right = 122.0
margin_bottom = 19.0
text = "Keyword all scenes"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordAllScenes"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "as "

[node name="KeywordOpenScenes" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 344.0
margin_right = 1820.0
margin_bottom = 368.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordOpenScenes"]
margin_top = 5.0
margin_right = 139.0
margin_bottom = 19.0
text = "Keyword open scenes"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordOpenScenes"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "s "

[node name="KeywordSettings" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 372.0
margin_right = 1820.0
margin_bottom = 396.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordSettings"]
margin_top = 5.0
margin_right = 225.0
margin_bottom = 19.0
text = "Keyword set project/editor settings"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordSettings"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "set "

[node name="KeywordFileTree" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 400.0
margin_right = 1820.0
margin_bottom = 424.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordFileTree"]
margin_top = 5.0
margin_right = 108.0
margin_bottom = 19.0
text = "Keyword file tree"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordFileTree"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "res"

[node name="KeywordGotoLine" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 428.0
margin_right = 1820.0
margin_bottom = 452.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordGotoLine"]
margin_top = 5.0
margin_right = 114.0
margin_bottom = 19.0
text = "Keyword goto line"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordGotoLine"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "g "

[node name="KeywordGotoMethod" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 456.0
margin_right = 1820.0
margin_bottom = 480.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordGotoMethod"]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 19.0
text = "Keyword goto method"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordGotoMethod"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "m "

[node name="KeywordTexteditorPlugin" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 484.0
margin_right = 1820.0
margin_bottom = 508.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordTexteditorPlugin"]
margin_top = 5.0
margin_right = 226.0
margin_bottom = 19.0
text = "Keyword texteditor plugin (by fenix)"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordTexteditorPlugin"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "f "

[node name="KeywordTODOPlugin" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 512.0
margin_right = 1820.0
margin_bottom = 536.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordTODOPlugin"]
margin_top = 5.0
margin_right = 257.0
margin_bottom = 19.0
text = "Keyword todo plugin (by need12648430)"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordTODOPlugin"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = "td "

[node name="KeywordCommandMenu" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 540.0
margin_right = 1820.0
margin_bottom = 564.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordCommandMenu"]
margin_top = 5.0
margin_right = 163.0
margin_bottom = 19.0
text = "Keyword command menu"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/KeywordCommandMenu"]
margin_left = 1320.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
text = ">"

[node name="FocusScene" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 568.0
margin_right = 1820.0
margin_bottom = 592.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/FocusScene"]
margin_top = 5.0
margin_right = 177.0
margin_bottom = 19.0
text = "Focus SceneDock: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/FocusScene"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "S"
editable = false

[node name="EditButton2" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/FocusScene"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="FocusInspector" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 596.0
margin_right = 1820.0
margin_bottom = 620.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/FocusInspector"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0
text = "Focus InspectorDock: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/FocusInspector"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "R"
editable = false

[node name="EditButton3" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/FocusInspector"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="FocusNode" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 624.0
margin_right = 1820.0
margin_bottom = 648.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/FocusNode"]
margin_top = 5.0
margin_right = 173.0
margin_bottom = 19.0
text = "Focus NodeDock: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/FocusNode"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "N"
editable = false

[node name="EditButton4" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/FocusNode"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="FocusFileSystem" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 652.0
margin_right = 1820.0
margin_bottom = 676.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/FocusFileSystem"]
margin_top = 5.0
margin_right = 209.0
margin_bottom = 19.0
text = "Focus FileSystemDock: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/FocusFileSystem"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "F"
editable = false

[node name="EditButton5" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/FocusFileSystem"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="FocusImport" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 680.0
margin_right = 1820.0
margin_bottom = 704.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/FocusImport"]
margin_top = 5.0
margin_right = 183.0
margin_bottom = 19.0
text = "Focus ImportDock: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/FocusImport"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "I"
editable = false

[node name="EditButton6" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/FocusImport"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="FocusScriptEditor" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 708.0
margin_right = 1820.0
margin_bottom = 732.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/FocusScriptEditor"]
margin_top = 5.0
margin_right = 180.0
margin_bottom = 19.0
text = "Focus ScriptEditor: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/FocusScriptEditor"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "Space"
editable = false

[node name="EditButton7" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/FocusScriptEditor"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="MoveNodeUp" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 736.0
margin_right = 1820.0
margin_bottom = 760.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/MoveNodeUp"]
margin_top = 5.0
margin_right = 220.0
margin_bottom = 19.0
text = "Move node selection up: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/MoveNodeUp"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "Up"
editable = false

[node name="EditButton8" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/MoveNodeUp"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="MoveNodeDown" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 764.0
margin_right = 1820.0
margin_bottom = 788.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/MoveNodeDown"]
margin_top = 5.0
margin_right = 238.0
margin_bottom = 19.0
text = "Move node selection down: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/MoveNodeDown"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "Down"
editable = false

[node name="EditButton9" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/MoveNodeDown"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="PrevScene" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 792.0
margin_right = 1820.0
margin_bottom = 816.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/PrevScene"]
margin_top = 5.0
margin_right = 187.0
margin_bottom = 19.0
text = "Previous scene tab: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/PrevScene"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "Left"
editable = false

[node name="EditButton11" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/PrevScene"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="NextScene" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 820.0
margin_right = 1820.0
margin_bottom = 844.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/NextScene"]
margin_top = 5.0
margin_right = 162.0
margin_bottom = 19.0
text = "Next scene tab: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/NextScene"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "Right"
editable = false

[node name="EditButton12" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/NextScene"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="ContextMenu" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SettingsVB"]
margin_top = 848.0
margin_right = 1820.0
margin_bottom = 872.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SettingsVB/ContextMenu"]
margin_top = 5.0
margin_right = 155.0
margin_bottom = 19.0
text = "Context Menu: Control +"
valign = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SettingsVB/ContextMenu"]
margin_left = 1320.0
margin_right = 1787.0
margin_bottom = 24.0
rect_min_size = Vector2( 467, 0 )
focus_mode = 0
size_flags_horizontal = 10
text = "C"
editable = false

[node name="EditButton10" type="Button" parent="MarginContainer/VBoxContainer/SettingsVB/ContextMenu"]
margin_left = 1791.0
margin_right = 1820.0
margin_bottom = 24.0
rect_min_size = Vector2( 29, 0 )
icon = SubResource( 2 )

[node name="ButtonsHB" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 777.0
margin_top = 1088.0
margin_right = 1042.0
margin_bottom = 1110.0
size_flags_horizontal = 4
size_flags_vertical = 10
custom_constants/separation = 25

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsHB"]
margin_right = 72.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../../SettingsVB/ContextMenu/EditButton10")
focus_neighbour_right = NodePath("../SaveButton")
text = "Cancel"
icon = SubResource( 2 )

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsHB"]
margin_left = 97.0
margin_right = 157.0
margin_bottom = 22.0
rect_min_size = Vector2( 60, 0 )
focus_neighbour_top = NodePath("../../SettingsVB/ContextMenu/EditButton10")
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Save"
icon = SubResource( 2 )

[node name="DefaultsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsHB"]
margin_left = 182.0
margin_right = 265.0
margin_bottom = 22.0
rect_min_size = Vector2( 60, 0 )
focus_neighbour_top = NodePath("../../SettingsVB/ContextMenu/EditButton10")
focus_neighbour_right = NodePath("../../SettingsVB/HideScriptPanelOnStart")
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Defaults"
icon = SubResource( 2 )

[node name="EnterShortcutPopup" type="WindowDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Enter Keyboard Shortcut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="EnterShortcutPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortcutLabel" type="Label" parent="EnterShortcutPopup/MarginContainer"]
margin_left = 920.0
margin_top = 565.0
margin_right = 1000.0
margin_bottom = 579.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Press keys..."
[connection signal="about_to_show" from="." to="." method="_on_CommandPaletteSettings_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_CommandPaletteSettings_popup_hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsHB/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsHB/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsHB/DefaultsButton" to="." method="_on_DefaultsButton_pressed"]
